Working simple version.
Added TOs.
Added simple implementation.
Added proof of concept tests.

--- a/orm/src/main/resources/application.properties
+++ b/orm/src/main/resources/application.properties
@@ -6,7 +6,7 @@ db.password=
 
 #Hibernate Configuration
 hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.format_sql=false
+hibernate.format_sql=true
 hibernate.hbm2ddl.auto=create-drop
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
-hibernate.show_sql=false
+hibernate.show_sql=true
