--- a/orm/src/main/resources/application.properties
+++ b/orm/src/main/resources/application.properties
@@ -1,3 +1,35 @@
+#Use H2 only for demo
+
+##Database Configuration
+#db.driver=org.h2.Driver
+#db.url=jdbc:h2:mem:datajpa
+#db.username=sa
+#db.password=
+#
+##Hibernate Configuration
+#hibernate.dialect=org.hibernate.dialect.H2Dialect
+#hibernate.format_sql=true
+#hibernate.hbm2ddl.auto=create-drop
+#hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
+#hibernate.show_sql=false
+
+# Real configurations
+
+##Postgres
+##Database Configuration
+#db.driver=org.postgresql.Driver
+#db.url=jdbc:postgresql://127.0.0.1:5432/bears
+#db.username=bears
+#db.password=bears
+#
+##Hibernate Configuration
+#hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#hibernate.show_sql=false
+#hibernate.format_sql=false
+#hibernate.hbm2ddl.auto=validate
+#hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
+
+# H@
 #Database Configuration
 db.driver=org.h2.Driver
 db.url=jdbc:h2:mem:datajpa
@@ -6,7 +38,7 @@ db.password=
 
 #Hibernate Configuration
 hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.format_sql=true
+hibernate.show_sql=false
+hibernate.format_sql=false
 hibernate.hbm2ddl.auto=create-drop
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
-hibernate.show_sql=true
