Cleanup and allowed test transactions to commit.

--- a/orm/pom.xml
+++ b/orm/pom.xml
@@ -181,7 +181,7 @@
 
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
+            <artifactId>slf4j-simple</artifactId>
         </dependency>
     </dependencies>
 </project>
