--- a/orm/src/main/resources/application.properties
+++ b/orm/src/main/resources/application.properties
@@ -1,19 +1,19 @@
-#Use H2 only for demo
+#H2
+#Database Configuration
+db.driver=org.h2.Driver
+db.url=jdbc:h2:mem:datajpa
+db.username=sa
+db.password=
 
-##Database Configuration
-#db.driver=org.h2.Driver
-#db.url=jdbc:h2:mem:datajpa
-#db.username=sa
-#db.password=
-#
-##Hibernate Configuration
-#hibernate.dialect=org.hibernate.dialect.H2Dialect
-#hibernate.format_sql=true
-#hibernate.hbm2ddl.auto=create-drop
-#hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
-#hibernate.show_sql=false
-
-# Real configurations
+#Hibernate Configuration
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.show_sql=true
+hibernate.format_sql=false
+#Tried with validate, but hibernate mappings will fail.
+#All tables that are auto-generated will be overridden by the jdbc:initialize-database to allow flexibility.
+#TODO:future attempt to remove
+hibernate.hbm2ddl.auto=create-drop
+hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
 ##Postgres
 ##Database Configuration
@@ -28,17 +28,3 @@
 #hibernate.format_sql=false
 #hibernate.hbm2ddl.auto=validate
 #hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
-
-# H@
-#Database Configuration
-db.driver=org.h2.Driver
-db.url=jdbc:h2:mem:datajpa
-db.username=sa
-db.password=
-
-#Hibernate Configuration
-hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.show_sql=false
-hibernate.format_sql=false
-hibernate.hbm2ddl.auto=create-drop
-hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
